<resources>
    <string name="app_name">My Memories</string>
    <string name="title_home">Mapa</string>
    <string name="title_dashboard">Memórias</string>

    <string name="titleNewMemory">Nova Memória</string>
    <string name="titleSaveNewMemory">Salvar Memória</string>

    <string name="btnCam">Câmera</string>
    <string name="btnGallery">Galeria</string>
    <string name="btnTakeLocalization">Usar Outra Localização</string>

    <string name="tilCity">Cidade</string>
    <string name="tilDescription">Descrição:</string>

    <string name="localization">Localização:</string>
    <string name="addText">Add text</string>

    <string name="title_activity_maps">Map</string>
</resources>